Cleanup for online version

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper,oneside,twoside,reqno,12pt,openright]{article}
-% \documentclass[a4paper,oneside,reqno,12pt]{article}
+%\documentclass[a4paper,oneside,twoside,reqno,12pt,openright]{article}
+\documentclass[a4paper,oneside,reqno,12pt]{article}
 %\usepackage[a4paper,left=4cm,right=3cm,top=3cm,bottom=3cm,head=0cm,headsep=0cm]{geometry}
 %\usepackage[utf8]{inputenc}
 %\usepackage[T1]{fontenc}
@@ -25,8 +25,8 @@
 \usepackage{inputenc}
 \usepackage{MnSymbol}
 \usepackage{mathtools}
-\usepackage[lmargin=142pt,rmargin=95pt,tmargin=127pt,bmargin=123pt]{geometry}
-%\usepackage{geometry}
+%\usepackage[lmargin=142pt,rmargin=95pt,tmargin=127pt,bmargin=123pt]{geometry}
+\usepackage{geometry}
 \usepackage{polski}
 \usepackage{plain}
 \usepackage{float}
@@ -81,31 +81,34 @@
 
 \begin{document}
 
-%\frontmatter
-\thispagestyle{empty}
-\subimport{}{title.tex}
-\newpage
-\thispagestyle{empty}
-\null
-\newpage
-\thispagestyle{empty}
-\subimport{}{oswiadczenie.tex}
-\newpage
-\thispagestyle{empty}
-\null
-\newpage
-\thispagestyle{empty}
-\tableofcontents
-\newpage
-\thispagestyle{empty}
-\null
-\newpage
-\thispagestyle{empty}
-\subimport{}{abstract.tex}
-\newpage
-%\mainmatter
+%%\frontmatter
+%\thispagestyle{empty}
+%\subimport{}{title.tex}
 %\newpage
-\setcounter{page}{1}
+%\thispagestyle{empty}
+%\null
+%\newpage
+%\thispagestyle{empty}
+%\subimport{}{oswiadczenie.tex}
+%\newpage
+%\thispagestyle{empty}
+%\null
+%\newpage
+%\thispagestyle{empty}
+%\tableofcontents
+%\newpage
+%\thispagestyle{empty}
+%\null
+%\newpage
+%\thispagestyle{empty}
+%\subimport{}{abstract.tex}
+%\newpage
+%\thispagestyle{empty}
+%\null
+%\newpage
+%%\mainmatter
+%%\newpage
+%\setcounter{page}{1}
 \subimport{includes/chapters/}{intro.tex}
 \newpage
 \subimport{includes/chapters/}{untyped.tex}
