Cleanup for online version

--- a/main.tex
+++ b/main.tex
@@ -95,8 +95,8 @@
 %\null
 %\newpage
 %\thispagestyle{empty}
-%\tableofcontents
-%\newpage
+\tableofcontents
+\newpage
 %\thispagestyle{empty}
 %\null
 %\newpage
